# SoionLab

./: .gitignore  README.md  dev_timeline.txt  init_core_tests.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
apps/: run_backtest.py  run_mock.py  run_realtime.py  run_sample.py
apps/run_code/: backtest_app.py  realtime_app.py
apps/scrap/: contract.py  ohlcv.py  option_chain.py  option_trades.py  trades.py
apps/strategy/: __init__.py  strategies.py
artifacts/: ohlcv_redundancy_selection_check.json
configs/: btc.json  logging.json
data/: structure_design.txt
docs/: INSTALL.md  contract_spec.md  engineering_manual_testing.txt  environment_variables.md  implementation_report_fault_handler_v3.md  ingestion_boundary.md  runtime_semantics.md  runtime_wiring_audit.md
docs/audits/: loader_wiring_audit.md  strategy_class_spec_migration.md  tick_routing_contamination.md
examples/: minimal_strategy.py
notebooks/scripts/: option_chain_handler_bootstrap.py
scripts/: installation.sh  lint.sh  qe_env.sh  test_all.sh  test_unit.sh  trace_migrate_v1_to_v2.py  typecheck.sh
scripts/option_chain/: qc_soft_degrade_audit_5m.py  qc_spread_liquidity_calibrate.py  rss_guard_supervisor.py  run_24x7_supervised.sh
skills/OHLCV_feature_engineering/: SKILL.md  TIMING_RULES.md  roadmap.md  runner.md
skills/Strategy_Writer/: OHLCV_GAP_HANDLING.md  SKILL.md  roadmap.md  runner.md  writer.md
skills/strategy-diagnosis/: SKILL.md  (+1 more)
src/: coding_protcols.txt  explanation.txt
tests/: conftest.py  pytest.ini  test_backtest_run.py  test_imports.py
(+419 files in other folders)
