[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-engine"
version = "0.1.0"
description = "Contract-driven quant research & trading engine (TradeBot v4)"
requires-python = ">=3.9"

# Optional but very recommended (for VSCode, ruff, pytest later)
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]